# test-repository

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: generate_changelog.yml  never_passing.yaml  publish_package.yml  python-testing-status.yaml  release.yml  test-python.yml  testing.yaml
src/test_package/: __init__.py
tests/: test_example.py
